fix: Align header to the right on landing page on mobile devices

--- a/site/static/styles/landingPage.css
+++ b/site/static/styles/landingPage.css
@@ -32,4 +32,8 @@ a.main-button {
 	.home-link {
 		display: none;
 	}
+
+	.header-content {
+		justify-content: right;
+	}
 }
